docs-website/versioned_docs/version-3.1/pipeline-components/extractors.mdx
---
title: "Extractors"
id: extractors
slug: "/extractors"
---

# Extractors

| Name                                                           | Description                                                                                                                                |
| --- | --- |
| [LLMDocumentContentExtractor](extractors/llmdocumentcontentextractor.mdx) | Extracts textual content from image-based documents using a vision-enabled Large Language Model (LLM).                                     |
| [LLMMetadataExtractor](extractors/llmmetadataextractor.mdx)               | Extracts metadata from documents using a Large Language Model. The metadata is extracted by providing a prompt to a LLM that generates it. |
| [PresidioEntityExtractor](extractors/presidioentityextractor.mdx)         | Detects PII in Documents and stores entities as structured metadata, without modifying the text. Powered by Microsoft Presidio.            |
| [RegexTextExtractor](extractors/regextextextractor.mdx)                   | Extracts text from chat messages or strings using a regular expression pattern.                                                            |
| [SpacyNamedEntityExtractor](extractors/spacynamedentityextractor.mdx)     | Extracts predefined entities out of a piece of text and writes them into documents' meta field. Uses a spaCy model.                        |
| [TransformersNamedEntityExtractor](extractors/transformersnamedentityextractor.mdx) | Extracts predefined entities out of a piece of text and writes them into documents' meta field. Uses a Hugging Face model.       |
